objects/Product_Tier_Set__c.object
<CustomObject>
    <fields>
        <fullName>Aggregation_Model__c</fullName>
        <label>Aggregation Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Step</fullName>
                    <default>true</default>
                    <label>Step</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Lookback</fullName>
                </value>
                <value>
                    <fullName>Max Per Month</fullName>
                </value>
                <value>
                    <fullName>Sum of Max Per Region Per Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Tier Sets</relationshipLabel>
        <relationshipName>Product_Tier_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units_Type__c</fullName>
        <label>Units Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes(Actual)</fullName>
                </value>
                <value>
                    <fullName>Messages/Seats/Ports</fullName>
                </value>
                <value>
                    <fullName>Minutes(12s/message)</fullName>
                </value>
                <value>
                    <fullName>Minutes(6s ceiling)</fullName>
                </value>
                <value>
                    <fullName>Minutes(30s ceiling)</fullName>
                </value>
                <value>
                    <fullName>Minutes(60s ceiling)</fullName>
                </value>
                <value>
                    <fullName>Minutes(6s/message)</fullName>
                </value>
                <value>
                    <fullName>Gigabytes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Tier Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Aggregation_Model__c</columns>
        <columns>Units_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Tier Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tier Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>